Fix: Overflow stlying for long buttons wasn't right in Bootstrap, Bulma, Foundation
Known issue still with popoverTitle

--- a/css/buttons.bootstrap.scss
+++ b/css/buttons.bootstrap.scss
@@ -16,6 +16,7 @@ div.dt-buttons {
 		.dropdown-menu {
 			margin-top: 4px;
 			display: block;
+			width: 100%;
 
 			li {
 				position: relative;
