--- a/css/buttons.bulma.scss
+++ b/css/buttons.bulma.scss
@@ -37,7 +37,7 @@ div.dt-button-collection {
 			flex-grow: 1;
 			flex-shrink: 0;
 			flex-basis: 50px;
-			padding: .375rem 1rem;
+			padding: .375rem 0 .375rem 1rem;
 		}
 
 		button:last-child {
